--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "node server.js",
     "build": "next build",
-    "start": "SET NODE_ENV=production & node server.js"
+    "start": "node server.js",
+    "heroku-postbuild": "next build"
   },
   "keywords": [],
   "author": "",
