--- a/package.json
+++ b/package.json
@@ -20,9 +20,13 @@
   "homepage": "https://github.com/Augus-top/tsumugu",
   "dependencies": {
     "express": "^4.16.4",
+    "generic-pool": "^3.4.2",
     "isomorphic-unfetch": "^3.0.0",
     "next": "^7.0.2",
     "react": "^16.6.3",
-    "react-dom": "^16.6.3"
+    "react-dom": "^16.6.3",
+    "limiter": "^1.1.0",
+    "defaults-shallow": "^0.1.0",
+    "shortid": "^2.2.14"
   }
 }
